k8s/my-app.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-svc
spec:
  type: ClusterIP
  selector:
    app: my-react-app
  ports:
  - name: http
    protocol: TCP
    port: 3000
    targetPort: 3000
  sessionAffinity: None
